--- a/render.yaml
+++ b/render.yaml
@@ -4,9 +4,10 @@ services:
     env: node
     plan: free
     buildCommand: |
-      cd client && npm ci && npm run build && cd ../server && npm ci
-    startCommand: node index.js
-    rootDir: server
+      npm ci
+      cd client && npm ci && npm run build
+      cd ../server && npm ci
+    startCommand: node server/index.js
     autoDeploy: true
     envVars:
       - key: NODE_VERSION
