--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
     "server": "cd server && npm run dev",
     "client": "cd client && npm start",
     "build": "cd client && npm run build",
-    "build:all": "cd client && npm ci && CI=false npm run build && cd ../server && npm ci",
     "install-all": "npm install && cd server && npm install && cd ../client && npm install",
-    "setup": "node setup.js",
-    "start": "cd server && node index.js"
+    "setup": "node setup.js"
   },
   "keywords": ["social-media", "posting", "telegram", "viber"],
   "author": "Your Name",
