--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
   - type: web
     name: social-posting-api
     env: node
-    plan: starter
+    plan: free
     buildCommand: cd server && npm install
     startCommand: cd server && npm start
     envVars:
@@ -26,7 +26,7 @@ services:
   - type: web
     name: social-posting-frontend
     env: static
-    plan: starter
+    plan: free
     buildCommand: cd client && npm install && npm run build
     staticPublishPath: ./client/build
     envVars:
