--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,8 @@
 services:
-  # Backend API Service
   - type: web
-    name: social-posting-api
+    name: social-posting-app
     env: node
-    plan: free
-    buildCommand: cd server && npm install
+    buildCommand: cd client && npm install && npm run build && cd ../server && npm install
     startCommand: cd server && npm start
     envVars:
       - key: NODE_ENV
@@ -21,14 +19,3 @@ services:
         sync: false
       - key: VIBER_COMMUNITY_ID
         sync: false
-
-  # Frontend Static Site
-  - type: web
-    name: social-posting-frontend
-    env: static
-    plan: free
-    buildCommand: cd client && npm install && npm run build
-    staticPublishPath: ./client/build
-    envVars:
-      - key: REACT_APP_API_URL
-        value: https://social-posting-api.onrender.com
