--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: social-posting-app
     env: node
-    buildCommand: cd client && npm install && npm run build && cd ../server && npm install
+    buildCommand: npm install && cd server && npm install && cd ../client && npm install && npm run build
     startCommand: cd server && npm start
     envVars:
       - key: NODE_ENV
